<resources>
    <string name="app_name">AppEducation</string>

    <string name="hint_nome">Nome Completo</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="txt_button_entrar">Entrar</string>
    <string name="txt_button_cadastrar">Cadastrar</string>
    <string name="txt_button_enviar">Enviar</string>
    <string name="txt_button_plantas">Plantas</string>
    <string name="txt_button_terrenos">Terrenos</string>
    <string name="txt_button_pragas">Pragas</string>
    <string name="txt_button_signout">SignOut</string>
    <string name="txt_forgot_password">Esqueceu sua senha?</string>
    <string name="txt_tela_cadastro">Não tem conta? Clique Aqui!</string>
    <string name="txt_tela_forgot">Cancelar</string>
    <string name="txt_tela_login">Já tem uma conta? Clique Aqui!</string>

    <string-array name="sexo_options">
        <item>Feminino</item>
        <item>Masculino</item>
    </string-array>

</resources>