<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_cyan_green"
        tools:context=".MainActivity">

        <View
            android:id="@+id/containerTopo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background_view_top_forgot"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/img_logo"
            app:layout_constraintTop_toTopOf="@id/containerTopo"
            app:layout_constraintStart_toStartOf="@id/containerTopo"
            app:layout_constraintEnd_toEndOf="@id/containerTopo"
            app:layout_constraintBottom_toBottomOf="@id/containerTopo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/containerTopo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_cyan_green"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:padding="15dp"
                android:background="@drawable/background_edittext"
                android:drawableEnd="@drawable/ic_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_button_enviar"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:padding="15dp"
            android:background="@drawable/background_button_selector"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/txtTelaForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_tela_forgot"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/btEnviar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/txtTelaForgot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_view_bottom"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="95dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>